test/test_examples/syntactic_examples/syntax_error/error_statement_01.zig
// Syntax error: empty commands are not allowed

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    ;
}